Move to slim temurin build for JDK 11